[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Music/08_Good_Bye_Prairie.ogg" type="AudioStream" id=2]
[ext_resource path="res://Menu/MenuBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Menu/PlayButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/HelpButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/ExitButton.tscn" type="PackedScene" id=7]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
stream_paused = false
mix_target = 0
bus = "Master"

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 660.0
margin_top = 230.0
margin_right = 1260.0
margin_bottom = 850.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0

[node name="Icon" type="TextureRect" parent="CenterContainer/VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 5

[node name="PlayButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 220.0
margin_bottom = 340.0

[node name="HelpButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 360.0
margin_bottom = 480.0

[node name="ExitButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 500.0
margin_bottom = 620.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
